Fix container in nav-tree

--- a/src/views/partials/nav-tree.ejs
+++ b/src/views/partials/nav-tree.ejs
@@ -1,5 +1,5 @@
 <nav class="nav-tree">
-    <div class="nav-tree__container">
+    <div class="container--nav-tree">
         <ul>
             <% nav_tree__data.forEach(function(item) { %>
             <li class="nav-tree__item">
