Update account addReview backend

--- a/src/views/components/review-popup.ejs
+++ b/src/views/components/review-popup.ejs
@@ -10,7 +10,7 @@
                 </svg>
             </div>
         </div>
-        <form class="section--popup" method="POST" action="/account/booking-history">
+        <form class="section--popup" method="POST" action="/account/history">
             <div class="popup-profile">
                 <img src="../../img/row-1-column-6.png" alt="" />
                 <div class="aside__content--detail">
