--- a/src/public/styles/pages/booking/payment.css
+++ b/src/public/styles/pages/booking/payment.css
@@ -248,7 +248,6 @@ hr {
     display: flex;
     flex-direction: column;
 }
-
 .section-content__confirm-detail {
     display: flex;
     flex-direction: column;
@@ -256,7 +255,7 @@ hr {
     border: 1px solid var(--outline-variant);
     border-radius: 12px;
     padding: 12px;
-    align-items: center;
+    align-items: stretch;
 }
 
 .button-confirm {
