Fix credit account pop-up

--- a/src/views/components/credit-account-popup.ejs
+++ b/src/views/components/credit-account-popup.ejs
@@ -1,3 +1,4 @@
+<!-- Co inline form_item Ma cvv -->
 <div class="modal2">credit__info
   <div class="credit-container">
     <section class="credit">
@@ -30,11 +31,17 @@
             <h3>Số thẻ:</h3>
             <input class="form-control" type="text" placeholder="Nhập số thẻ" />
           </div>
-          <div class="form__item-2">
-            <h3 class="input-1">Ngày hết hạn:</h3>
-            <input class="form-control" type="date" placeholder="mm/yyyy" />
-            <h3 class="input-2">Mã CCV:</h3>
-            <input class="form-control" type="text" placeholder="Nhập mã CCV" />
+          <!-- form__item-2 -->
+          <div class="form__item">  
+            <div class="form__item-2__date" >
+              <h3 class="input-1">Ngày hết hạn:</h3>
+              <input class="form-control" type="date" placeholder="mm/yyyy" />
+            </div>
+
+            <div class="form__item-2__CCV">
+              <h3 class="input-2"">Mã CCV:</h3>
+              <input class="form-control" type="text" placeholder="Nhập mã CCV" />
+            </div>
           </div>
           <div class="form__item">
             <h3>Họ và tên chủ thẻ:</h3>
