--- a/src/public/styles/pages/account/payment.css
+++ b/src/public/styles/pages/account/payment.css
@@ -100,8 +100,8 @@ hr {
     padding: 24px;
     border: 1px solid var(--outline-variant);
     border-radius: 8px;
-    width: 75%;
-    align-items: start;
+    width: 100%;
+    align-items: center;
 }
 
 .form__card-items {
