--- a/src/views/components/cancel-popup.ejs
+++ b/src/views/components/cancel-popup.ejs
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0"/>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="../../public/styles/components/cancel-popup.css">
-    </head>
-    <body class="cancel-container">
+<div class="cancel-container">
         <div class="cancel">
             <div class="cancel__card">
                 <h1>Hủy đặt phòng</h1>
@@ -90,5 +81,4 @@
                 </div>
             </div>
         </div>
-    </body>
-</html>
+    </div>
