--- a/src/views/components/bank-account-popup.ejs
+++ b/src/views/components/bank-account-popup.ejs
@@ -4,7 +4,7 @@
       <div class="account__card">
         <h1>Thêm tài khoản ngân hàng</h1>
         <div class="account__items">
-          <div class="account__item" style="margin-left: -60px">
+          <div class="account__item">
             <h2>Tên ngân hàng:</h2>
             <select class="form-select" aria-label="Default select example">
               <option selected>Chọn ngân hàng</option>
