--- a/src/views/pages/site/about.ejs
+++ b/src/views/pages/site/about.ejs
@@ -72,8 +72,8 @@
                 </div>
             </div>
         </section>
-        <img class="homepage__banner" src="/imgs/banner.png" alt="Banner">
-        <section class="mt-48">
+        <img class="homepage__banner" id="partner" src="/imgs/banner.png" alt="Banner">
+        <section class="mt-48" >
             <div class="about__container">
                 <h1 class="section__title primary-text mt-48">Thông tin đối tác</h1>
                 <div class="section__content mt-24">
