--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -27,7 +27,7 @@
             <h3>Công ty</h3>
             <ul class="footer-container__about-list">
                 <li class="about-list__link"><a href="/about">Về chúng tôi</a></li>
-                <li class="about-list__link"><a href="https://daa.uit.edu.vn/">Thông tin đối tác</a></li>
+                <li class="about-list__link"><a href="/about#partner">Thông tin đối tác</a></li>
             </ul>
         </div>
         <div class="footer-container__policy col-lg-2">
