--- a/src/views/pages/booking/cancellation.ejs
+++ b/src/views/pages/booking/cancellation.ejs
@@ -11,22 +11,23 @@
 </head>
 
 <body>
+    <%- include('../../partials/header-small') %>
     <main class="content-container">
         <section class="main-content">
             <div class="cancel-status">
-                <h1>Đặt phòng của bạn ở Hội An đã được <p>hủy miễn phí</p>
+                <h1>Đặt phòng của bạn ở Hội An đã được <span>hủy miễn phí</span>
                 </h1>
             </div>
 
             <div class="cancel-description">
                 <div class="cancel-description__item">
                     <span class="material-symbols-outlined">done</span>
-                    <h3>Xác nhận hủy phòng đang được gửi tới <p>21520796@gm.uit.edu.vn.</p>
+                    <h3>Xác nhận hủy phòng đang được gửi tới 21520796@gm.uit.edu.vn.</p>
                     </h3>
                 </div>
                 <div class="cancel-description__item">
                     <span class="material-symbols-outlined">done</span>
-                    <h3>Đặt phòng của bạn đã được hủy thành công <p>- bạn không cần làm thêm gì nữa!</p>
+                    <h3>Đặt phòng của bạn đã được hủy thành công - bạn không cần làm thêm gì nữa!</p>
                     </h3>
                 </div>
                 <div class="cancel-description__item">
@@ -84,6 +85,8 @@
             </div>
         </section>
     </main>
+    <%- include('../../partials/footer') %>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
