--- a/src/views/pages/booking/cancellation.ejs
+++ b/src/views/pages/booking/cancellation.ejs
@@ -12,6 +12,7 @@
 
 <body>
     <%- include('../../partials/header-small') %>
+    
     <main class="content-container">
         <section class="main-content">
             <div class="cancel-status">
@@ -32,7 +33,7 @@
                 </div>
                 <div class="cancel-description__item">
                     <span class="material-symbols-outlined">done</span>
-                    <h3>Nếu có bất kỳ phát sinh nào về chi phí, hãy liên hệ với <a class="hotel" href="#">The Soul Hotel</a> để biết thêm thông tin.</h3>
+                    <h3>Nếu có bất kỳ phát sinh nào về chi phí, hãy liên hệ với <a class="hotel" href="https://daa.uit.edu.vn/">The Soul Hotel</a> để biết thêm thông tin.</h3>
                 </div>
             </div>
             <div class="cancel__button">
@@ -88,6 +89,8 @@
     <%- include('../../partials/footer') %>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="/scripts/cancellation.js" defer></script>
+
 </body>
 
 </html>
