--- a/src/public/styles/partials/header-small.css
+++ b/src/public/styles/partials/header-small.css
@@ -13,6 +13,7 @@ header {
 
 .header-container {
     width: 80%;
+    max-width: 1152px;
     margin: 0 auto;
     display: flex;
     align-items: center;
