--- a/src/views/partials/header-medium.ejs
+++ b/src/views/partials/header-medium.ejs
@@ -9,14 +9,11 @@
         <button href="#" class="status-layer noti-btn-hm">Thông báo</button>
       </div>
       <div class="header-container__top-authenticator">
-        <% if(status === 'success'){ %>
         <p>Chào,</p>
         <p class="name-btn-hm">data</p>
-        <img src="/imgs/milo.jpg" alt="avatar" class="avatar-btn-hm"/>
-        <% } else{ %>
-        <button type="button" class="button-signin signin-btn-hm">Đăng nhập</button>
-        <button type="button" class="button-signup signup-btn-hm">Đăng ký</button>
-        <% } %>
+        <img src="/imgs/milo.jpg" alt="avatar" class="avatar-btn-hm" />
+        <!-- <button type="button" class="button-signin signin-btn-hm">Đăng nhập</button>
+        <button type="button" class="button-signup signup-btn-hm">Đăng ký</button> -->
 
         <!-- Header with no login -->
         <!-- 
