--- a/src/views/partials/header-small-title.ejs
+++ b/src/views/partials/header-small-title.ejs
@@ -2,7 +2,7 @@
   <div class="header-container">
     <img class="header-container__img logo-click-hst" src="/imgs/logo.svg" alt="Logo" />
     <p class="header-container__title"><%= title %></p>
-    <a href="#" class="header-container__help"><%= help %></a>
+    <a class="header-container__help" onclick="redirectToPage('<%= help %>')"><%= help %></a>
   </div>
 </header>
 <div class="space"></div>
