--- a/src/public/styles/partials/header-full.css
+++ b/src/public/styles/partials/header-full.css
@@ -6,13 +6,11 @@ header {
   align-items: center;
   justify-content: space-around;
   width: 100%;
-  background-image: url(/imgs/bg-header.png);
   height: 484px;
-  object-fit: contain;
-  position: no-repeat;
-  position: contain;
+  background: url(/imgs/bg-header.png) no-repeat;
+  background-size: cover;
+  background-position: center;
   background-color: var(--primary-color-1);
-  top: 0;
 }
 
 .header-container {
