--- a/src/public/styles/partials/header-medium.css
+++ b/src/public/styles/partials/header-medium.css
@@ -7,11 +7,10 @@ header {
   justify-content: space-around;
   width: 100%;
   height: 240px;
-  position: no-repeat;
-  position: contain;
-  background-image: url("/imgs/bg-header.png");
+  background: url(/imgs/bg-header.png) no-repeat;
+  background-size: cover;
+  background-position: center;
   background-color: var(--primary-color-1);
-  top: 0;
 }
 
 .header-container {
