--- a/src/views/components/noti-item-account.ejs
+++ b/src/views/components/noti-item-account.ejs
@@ -1,7 +1,7 @@
 <div class="noti-item__block">
     <img src="/imgs/avatar.png" alt="img" class="noti-item__img">
     <form action="/notifications/account-update" method="POST" class="noti-item__main">
-        <input type="hidden" name="hello" value="<%data_noti[0].noti_id%>">
+        <input type="hidden" name="hello" value="">
         <div>
 
 
