--- a/src/views/pages/account/information.ejs
+++ b/src/views/pages/account/information.ejs
@@ -50,9 +50,13 @@
 
       <div class="form__items">
         <div class="form__item">
-          <h1>Họ và tên:</h1>
-          <input class="form-control" type="text" placeholder="Phan Nguyễn Yến Giàu" disabled />
+          <h1>Họ:</h1>
+          <input class="form-control" type="text" placeholder="Phan" disabled />
+
+          <h1>Tên:</h1>
+          <input class="form-control" type="text" placeholder="Giàu" disabled />
         </div>
+
 
         <div class="form__item">
           <h1>Địa chỉ Email:</h1>
@@ -93,8 +97,11 @@
 
       <div class="form__items">
         <div class="form__item">
-          <h1>Họ và tên:</h1>
-          <input class="form-control" type="text" placeholder="Phan Nguyễn Yến Giàu" />
+          <h1>Họ:</h1>
+          <input class="form-control" type="text" placeholder="Phan" />
+
+          <h1>Tên:</h1>
+          <input class="form-control" type="text" placeholder="Giàu" />
         </div>
 
         <div class="form__item">
