--- a/src/views/pages/booking/cancellation.ejs
+++ b/src/views/pages/booking/cancellation.ejs
@@ -35,9 +35,9 @@
                 </div>
             </div>
             <div class="cancel__button">
-                <button class="cancel__button--submit1">Đặt lại</button>
+                <a href="/search/detail"><button class="cancel__button--submit1">Đặt lại</button></a>
 
-                <button class="cancel__button--submit2">Tìm chỗ nghỉ khác</button>
+                <a href="/"><button class="cancel__button--submit2">Tìm chỗ nghỉ khác</button></a>
             </div>
         </section>
         <section class="extend-content">
