--- a/src/public/styles/components/cancel-popup.css
+++ b/src/public/styles/components/cancel-popup.css
@@ -1,10 +1,21 @@
+.modal {
+  position: fixed;
+  display: none;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+}
 .cancel-container {
   padding: 160px;
   margin: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #000000;
+  /* background-color: #000000; */
+  /* background-color: rgba(0, 0, 0, 0.2); */
 }
 
 .cancel {
@@ -161,3 +172,14 @@ hr {
   opacity: 0.6;
   cursor: default;
 }
+/* @keyframes modalFadeIn {
+  from {
+      opacity: 0;
+      transform: translateY(-200px);
+  }
+
+  to {
+      opacity: 1;
+      transform: translateY(0);
+  }
+} */
