--- a/src/public/styles/pages/booking/detail.css
+++ b/src/public/styles/pages/booking/detail.css
@@ -1,4 +1,5 @@
 @import url("/styles/base.css");
+@import url("/styles/components/cancel-popup.css");
 
 html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
