--- a/src/views/components/cancel-popup.ejs
+++ b/src/views/components/cancel-popup.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
@@ -7,7 +7,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="../../public/styles/components/cancel-popup.css">
     </head>
-    <body class="cancel-container">
+    <body> -->
+        <form id="cancel-form" action="/booking/cancellation">
+        <div class="modal">
+    <div class="cancel-container"> 
         <div class="cancel">
             <div class="cancel__card">
                 <h1>Hủy đặt phòng</h1>
@@ -41,37 +44,37 @@
                         <p>Thông tin này là cần thiết để bạn hoàn tất hủy phòng</p>
                         <div class="cancel__option">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="option" id="option1">
+                                <input class="form-check-input" type="radio" name="option" id="option1" value="Tôi đã tìm được lựa chọn chỗ nghỉ thay thế">
                                 <label class="form-check-label" for="option1">
                                     Tôi đã tìm được lựa chọn chỗ nghỉ thay thế
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="option" id="option2" checked>
+                                <input class="form-check-input" type="radio" name="option" id="option2" value="Chỗ nghỉ yêu cầu hủy" >
                                 <label class="form-check-label" for="option2">
                                     Chỗ nghỉ yêu cầu hủy
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="option" id="option3" checked>
+                                <input class="form-check-input" type="radio" name="option" id="option3" value="Số lượng hoặc nhu cầu của tôi có thay đổi">
                                 <label class="form-check-label" for="option3">
                                     Số lượng hoặc nhu cầu của tôi có thay đổi
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="option" id="option4" checked>
+                                <input class="form-check-input" type="radio" name="option" id="option4" value="Đổi ngày hoặc điểm đến">
                                 <label class="form-check-label" for="option4">
                                     Đổi ngày hoặc điểm đến
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="option" id="option5" checked>
+                                <input class="form-check-input" type="radio" name="option" id="option5" value=" Lý do cá nhân/chuyến đi bị hủy">
                                 <label class="form-check-label" for="option5">
                                     Lý do cá nhân/chuyến đi bị hủy
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="option" id="option6" checked>
+                                <input class="form-check-input" type="radio" name="option" id="option6" value="Không phải các lý do trên">
                                 <label class="form-check-label" for="option6">
                                     Không phải các lý do trên
                                 </label>
@@ -79,16 +82,19 @@
                         </div>
                     </div>
                     <div class="cancel__button">
-                        <button class="cancel__button--submit1">Đồng ý, xác nhận hủy đặt phòng</button>
-
-                        <button class="cancel__button--submit2">Không, tôi không muốn hủy</button>
+                    <button type="submit" id="submitBtn" class="cancel__button--submit1">Đồng ý, xác nhận hủy đặt phòng</button>
+                    <button class="cancel__button--submit2 closeBtn">Không, tôi không muốn hủy</button>
                     </div>
 
                 </div>
                 <div class="cancel__close--btn">
-                    <span class="material-symbols-outlined closeIcon2">cancel</span>
+                    <span class="material-symbols-outlined closeIcon">cancel</span>
                 </div>
             </div>
         </div>
-    </body>
-</html>
+    </div>
+</form>
+</div>
+
+    <!-- </body>
+</html> -->
