--- a/src/views/pages/booking/detail.ejs
+++ b/src/views/pages/booking/detail.ejs
@@ -113,11 +113,13 @@
                 </div>
                 <p class="progress__time">12 tháng 10</p>
             </div>
-            <button type="button" class="btn detail__btn">Hủy đặt phòng</button>
+            <button type="submit" class="btn detail__btn" id="cancelBtn">Hủy đặt phòng</button>
         </section>
     </main>
-
+<%- include('../../components/cancel-popup') %>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="/scripts/booking-detail.js"></script>
+    <script src="/scripts/cancel-popup.js"></script>
 </body>
 
 </html>
