--- a/src/views/pages/booking/success.ejs
+++ b/src/views/pages/booking/success.ejs
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-
     <main class="content-container">
         <section class="main-content">
             <div class="order-status">
@@ -25,7 +24,7 @@
             <div class="order-description">
                 <div class="order-description__item">
                     <span class="material-symbols-outlined">done</span>
-                    <p>Xác nhận đang được gửi tới 2152xxxx@gm.uit.edu.vn.</p>
+                    <p>Xác nhận đang được gửi tới <%= data[0].book_email %>.</p>
                 </div>
                 <div class="order-description__item">
                     <span class="material-symbols-outlined">done</span>
@@ -53,21 +52,34 @@
                 <div class="order-summary__item">
                     <img src="/imgs/details/1.jpg" alt="">
                     <div class="order-summary__content">
-                        <h3>Room Soul</h3>
+                        <h3><%= data[0].room_class %></h3>
                         <div>
                             <span class="material-symbols-outlined">local_atm</span>
-                            <p>Tổng giá: VND 1.500.000</p>
+                            <p>Tổng giá: VND <%= data[0].book_final_cost %></p>
                         </div>
                         <div>
                             <span class="material-symbols-outlined">calendar_month</span>
-                            <p>T5, ngày 12 tháng 10 - CN, ngày 15 tháng 10, 2023, 3 đêm </p>
-                        </div>
+                            <p><%if(data[0].book_start_dayofweek==1) { %> CN,
+                               <% } else { %> 
+                                T<%- data[0].book_start_dayofweek %>,
+                               <% } %> ngày 
+                               <%= data[0].book_start_day %> tháng 
+                                <%= data[0].book_start_month %> - 
+                                <%if(data[0].book_end_dayofweek==1) { %> CN,
+                                <% } else { %> 
+                                T<%- data[0].book_end_dayofweek %>,
+                                <% } %> ngày 
+                                <%= data[0].book_end_day %> tháng 
+                                <%= data[0].book_end_month %>, 
+                                <%= data[0].book_end_year %>, 
+                                <%= data[0].book_num_day %> đêm </p>                        
+                        </div> 
                         <div>
                             <span class="material-symbols-outlined">bed</span>
-                            <p>3 phòng</p>
+                            <p><%= data[0].book_num_room %> phòng</p>
                         </div>
                     </div>
-                    <button type="button" class="btn order-btn">Xem chi tiết</button>
+                   <a href="/booking/detail"><button type="button" class="btn order-btn" id="btnDetail">Xem chi tiết</button></a>
                 </div>
             </div>
         </section>
@@ -75,7 +87,7 @@
         <section class="extend-content">
             <div class="order-code">
                 <div>
-                    <p>Mã xác nhận: 123456789</p>
+                    <p>Mã xác nhận: <%= data[0].book_id %></p>
                     <span class="material-symbols-outlined">content_copy</span>
                 </div>
                 <div>
@@ -88,7 +100,7 @@
                 <div class="order-description">
                     <div class="order-description__item">
                         <span class="material-symbols-outlined">done</span>
-                        <p>Xác nhận đang được gửi tới 2152xxxx@gm.uit.edu.vn.</p>
+                        <p>Xác nhận đang được gửi tới <%= data[0].book_email %>.</p>
                     </div>
                     <div class="order-description__item">
                         <span class="material-symbols-outlined">done</span>
@@ -103,7 +115,6 @@
             </div>
         </section>
     </main>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
