--- a/src/public/styles/partials/footer.css
+++ b/src/public/styles/partials/footer.css
@@ -133,3 +133,9 @@ footer {
 	height: 48px;
 	padding: 0 16px;
 }
+
+.footer-container__form{
+	display: flex;
+	gap:10px;
+	justify-content: space-between;
+}
