--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,4 +1,5 @@
 <footer>
+    <script src="/scripts/footer.js" defer></script>
     <div class="footer-container row">
         <div class="footer-container__contact col-lg-5">
             <h3>2WAYS.com</h3>
@@ -33,9 +34,9 @@
         <div class="footer-container__policy col-lg-2">
             <h3>Điều khoản</h3>
             <ul class="footer-container__policy-list">
-                <li class="policy-list__link"><a href="https://daa.uit.edu.vn/">Chính sách bảo mật</a></li>
-                <li class="policy-list__link"><a href="https://daa.uit.edu.vn/">Điều kiện đặt phòng</a></li>
-                <li class="policy-list__link"><a href="https://daa.uit.edu.vn/">Điều khoản chung</a></li>
+                <li class="policy-list__link"><a href="/privacy-policy">Chính sách bảo mật</a></li>
+                <li class="policy-list__link"><a href="/terms-of-use">Điều kiện đặt phòng</a></li>
+                <li class="policy-list__link"><a href="/terms-of-use">Điều khoản chung</a></li>
             </ul>
         </div>
 
@@ -45,14 +46,14 @@
                 Xác nhận thư điện tử của bạn để nhận được ngay những cập nhật mới nhất
                 từ chúng tôi hàng tuần
             </p>
-            <form action="#" method="POST">
+            <div class="footer-container__form">
                 <input type="email" name="email_input" id="email_input" class="form-control update__input-field" placeholder="Email của bạn" required />
                 <button class="btn--filled sec" type="submit">
                     <div class="status-layer">
                         <span>Xác nhận</span>
                     </div>
                 </button>
-            </form>
+            </div>
         </div>
     </div>
     </div>
