--- a/src/public/styles/pages/booking/cancellation.css
+++ b/src/public/styles/pages/booking/cancellation.css
@@ -1,5 +1,5 @@
 @import url("/styles/base.css");
-@import url("/styles/partials/header-small.css");
+/* @import url("/styles/partials/header-small.css"); */
 @import url("/styles/partials/footer.css");
 
 html {
