--- a/src/public/styles/pages/account/information.css
+++ b/src/public/styles/pages/account/information.css
@@ -25,20 +25,13 @@ body {
     gap: 12px;
 }
 
-hr {
-    background-color: var(--outline-variant);
-    border-width: 1px;
-    width: 98%;
-    margin: 14px;
-}
-
 .aside-content {
     display: flex;
     flex-direction: column;
     width: 25%;
     padding: 12px;
     border-radius: 8px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
+    border: 1px solid var(--outline-variant);
     background: var(--white);
     height: 450px;
 }
@@ -76,7 +69,6 @@ hr {
     background-color: var(--primary-color-1);
     color: var(--white);
     border-radius: 8px;
-    padding: 12px;
 }
 
 .aside-content__img {
