--- a/src/public/styles/pages/account/change-password.css
+++ b/src/public/styles/pages/account/change-password.css
@@ -19,17 +19,10 @@ body {
 .change-password-container {
     margin-top: 12px;
     margin-bottom: 12px;
-    /* width: 80%; */
+    width: 80%;
     width: 1152px;
     display: flex;
     gap: 12px;
-}
-
-hr {
-    background-color: var(--outline-variant);
-    border-width: 1px;
-    width: 98%;
-    margin: 12px;
 }
 
 .aside-content {
@@ -38,7 +31,7 @@ hr {
     width: 25%;
     padding: 12px;
     border-radius: 8px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
+    border: 1px solid var(--outline-variant);
     background: var(--white);
     height: 450px;
 }
@@ -71,7 +64,6 @@ hr {
     background-color: var(--primary-color-1);
     color: var(--white);
     border-radius: 8px;
-    padding: 12px;
 }
 
 .aside-content__img {
