--- a/src/public/styles/pages/order-payment.css
+++ b/src/public/styles/pages/order-payment.css
@@ -2,6 +2,8 @@
 @import url("/styles/partials/header-small.css");
 @import url("/styles/partials/footer.css");
 @import url("/styles/partials/nav-tree.css");
+@import url("/styles/components/success-popup.css");
+@import url("/styles/components/otp.css");
 
 body {
     width: 100vw;
