--- a/src/views/pages/booking/payment.ejs
+++ b/src/views/pages/booking/payment.ejs
@@ -10,7 +10,10 @@
   <title>2WAYS.com</title>
 </head>
 
+
 <body>
+  <%- include('../../partials/header-small') %>
+  <%- include('../../partials/nav-tree', { nav_tree__data }) %>
 
   <div class="payment-container">
     <aside class="aside-wrapper">
@@ -75,8 +78,8 @@
 
         <div class="aside-wrapper__your-choice">
           <h5>Bạn đã chọn</h5>
-          <h5><b>1 phòng cho 2 người lớn</b></h5>
-          <a href="#"><b style="color: #0866ff">Đổi lựa chọn của bạn</b></a>
+          <h5><b>tên khách sạn</b></h5>
+          <a href="#" class="change-choice"><b style="color: #0866ff">Đổi lựa chọn của bạn</b></a>
         </div>
 
         <div class="aside-wrapper__cost-total">
@@ -105,9 +108,9 @@
           <h5>Bạn đã đăng nhập bằng:</h5>
           <div class="section-content__email-logout">
             <h5>2152****@gm.uit.edu.vn</h5>
-            <h5>
+            <!-- <h5>
               <b style="color: #0866ff">(Không phải bạn? <a href="">Thoát</a>)</b>
-            </h5>
+            </h5> -->
           </div>
         </div>
       </div>
@@ -239,28 +242,32 @@
 
         <h5>
           <b>Bạn có thể hủy đăng ký bất cứ lúc nào. Xem
-            <a href="#">chính sách bảo mật</a> của chúng tôi.</b>
+            <a href="#" class="privacy-policy">chính sách bảo mật</a> của chúng tôi.</b>
         </h5>
 
         <h5>
           <b>Đặt phòng của bạn là đặt phòng trực tiếp với 2WAYs và bằng việc
             hoàn tất đặt phòng này, bạn đồng ý với
-            <a href="#">điều kiện đặt phòng</a>,
-            <a href="#">điều khoản chung</a> và
-            <a href="#">chính sách bảo mật</a>.</b>
+            <a href="#" class="term-use">điều kiện đặt phòng</a>,
+            <a href="#" class="term-use">điều khoản chung</a> và
+            <a href="#" class="privacy-policy">chính sách bảo mật</a>.</b>
         </h5>
 
         <div class="button-confirm">
-          <button href="#" class="check-info">Kiểm tra lại thông tin</button>
-          <button class="submit-booking doneBookingBtn">
+          <button href="#" class="check-info check-info-booking">Kiểm tra lại thông tin</button>
+          <button class="submit-booking done-booking-btn">
             Hoàn tất đặt phòng
           </button>
         </div>
 
-        <a href="#" style="text-align: end; color: #0866ff"><b>Các điều kiện đặt phòng là gì?</b></a>
+        <a href="#" style="text-align: end; color: #0866ff" class="term-use"><b>Các điều kiện đặt phòng là gì?</b></a>
       </div>
     </section>
   </div>
+  <%- include('../../components/otp')  %>
+  <%- include('../../components/success-popup')  %>
+
+  <%- include('../../partials/footer') %>
 
 
 </body>
@@ -268,5 +275,8 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="/scripts/order-payment.js"></script>
+<script src="/scripts/otp.js"></script>
+<script src="/scripts/header-small.js"></script>
+
 
 </html>
