--- a/src/views/pages/booking/cancellation.ejs
+++ b/src/views/pages/booking/cancellation.ejs
@@ -8,9 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="/styles/pages/booking/cancellation.css" />
     <title>2WAYS.com</title>
+   
 </head>
 
 <body>
+    <div>
+        <%- include('../../components/on-top-btn.ejs') %>
+            <!-- static to booking css to incluce on top button -->
+            <!-- app.use(express.static(path.join(__dirname, "static"))); -->
+    </div>
     
     <main class="content-container">
         <section class="main-content">
@@ -85,6 +91,7 @@
             </div>
         </section>
     </main>
+    
     <%- include('../../partials/footer') %>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
