Fix ui accountPage/ change-password, history, information, card

--- a/src/public/styles/pages/account/change-password.css
+++ b/src/public/styles/pages/account/change-password.css
@@ -20,7 +20,7 @@ body {
     margin-top: 12px;
     margin-bottom: 12px;
     width: 80%;
-    width: 1152px;
+    max-width: 1152px;
     display: flex;
     gap: 12px;
 }
@@ -33,7 +33,7 @@ body {
     border-radius: 8px;
     border: 1px solid var(--outline-variant);
     background: var(--white);
-    height: 450px;
+    align-self: flex-start;
 }
 
 .aside-content__profile {
@@ -53,7 +53,8 @@ body {
     cursor: pointer;
 }
 
-.aside-content__section p:hover {
+.aside-content__section p:hover,
+.logout-btn:hover {
     border-radius: 8px;
     background-color: var(--gray);
     transition: 0.3s;
@@ -78,7 +79,7 @@ body {
 .aside-content__item p {
     color: var(--red);
     font-weight: 500;
-    padding-left: 12px;
+    margin: 12px;
 }
 
 .form-input {
@@ -86,7 +87,7 @@ body {
     border: 1px solid var(--outline-variant);
     border-radius: 8px;
     width: 75%;
-    padding: 12px;
+    padding: 24px;
     height: 240px;
 }
 
