--- a/src/views/pages/account/card.ejs
+++ b/src/views/pages/account/card.ejs
@@ -40,7 +40,7 @@
       </div>
     </aside>
 
-    <section class="form">
+    <section class="form form-input">
       <div class="form__title">
         <h1>Thông tin thanh toán</h1>
         <p>Thêm hoặc bỏ các phương thức thanh toán</p>
