--- a/src/public/styles/pages/account/payment.css
+++ b/src/public/styles/pages/account/payment.css
@@ -23,7 +23,7 @@ body {
     margin-top: 12px;
     margin-bottom: 12px;
     width: 80%;
-    width: 1152px;
+    max-width: 1152px;
     display: flex;
     gap: 12px;
 }
@@ -31,18 +31,22 @@ body {
 .aside-content {
     display: flex;
     flex-direction: column;
-    width: 25%;
+    width: 24.745%;
     padding: 12px;
     border-radius: 8px;
     border: 1px solid var(--outline-variant);
     background: var(--white);
-    height: 450px;
+    align-self: flex-start;
 }
 
 .aside-content__profile {
     display: flex;
     align-items: center;
     gap: 12px;
+}
+.aside-content__detail-bold {
+    font-weight: 500;
+    margin: 12px 0 0 0;
 }
 
 .aside-content__section {
@@ -56,7 +60,8 @@ body {
     cursor: pointer;
 }
 
-.aside-content__section p:hover {
+.aside-content__section p:hover,
+.logout-btn:hover {
     border-radius: 8px;
     background-color: var(--gray);
     transition: 0.3s;
@@ -75,23 +80,30 @@ body {
     border-radius: 100%;
 }
 
-.aside-content__detail-bold {
-    font-weight: 500;
-    margin: 12px 0 0 0;
-}
-
 .aside-content__item p {
     color: var(--red);
     font-weight: 500;
-    padding-left: 12px;
+    margin: 12px;
+    cursor: pointer;
 }
 
-.form {
-    padding: 24px;
+.form-input {
     border: 1px solid var(--outline-variant);
     border-radius: 8px;
-    width: 75%;
+    width: 74%;
     align-items: start;
+    padding: 24px;
+}
+.form__title h1 {
+    font-size: 2.5rem;
+    margin-bottom: 0.5rem;
+    padding: 0;
+}
+.form__title p {
+    margin-bottom: 0;
+}
+hr {
+    width: 100%;
 }
 
 .form__card-items {
@@ -185,8 +197,9 @@ body {
     font-weight: 300;
 }
 
-.form__card-detail .line-delete {
+.line-delete {
     text-decoration-line: underline;
+    cursor: pointer;
 }
 
 button.filled-default {
