--- a/src/views/pages/account/card-fill.ejs
+++ b/src/views/pages/account/card-fill.ejs
@@ -40,7 +40,7 @@
       </div>
     </aside>
 
-    <section class="form">
+    <section class="form form-input">
       <div class="form__title">
         <h1>Thông tin thanh toán</h1>
         <p>Thêm hoặc bỏ các phương thức thanh toán</p>
@@ -102,6 +102,8 @@
   <script src="/scripts/credit-account-popup.js"></script>
   <script src="/scripts/search-bar.js"></script>
   <script src="/scripts/header-medium.js"></script>
+  <script src="/scripts/otp.js"></script>
+
 
 </body>
 
