Remove BE to FE and fix card-fill into components

--- a/src/views/pages/auth/login.ejs
+++ b/src/views/pages/auth/login.ejs
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <%- include('../../partials/header-small-title') %>
+  <%- include('../../partials/header-small-title',{help: "Bạn quên mật khẩu?", title:"Đăng nhập"}) %>
 
   <main class="content-container">
     <section class="intro">
