--- a/src/views/components/room.ejs
+++ b/src/views/components/room.ejs
@@ -4,7 +4,7 @@
         <h2 class="room__type"><%= room.room_class%></h2>
         <div class="room__detail">
             <div class="room__detail--left">
-                <img src="/imgs/details/1.jpg" alt="" class="room__preview">
+                <img src="/imgs/accommodation/accommodation_1.jpg" alt="" class="room__preview">
                 <div class="room__area">
                     <span class="material-symbols-outlined">square_foot</span>
                     <p>50 m<sup>2</sup></p>
@@ -54,7 +54,7 @@
                         </div>
                         <div>
                             <span class="material-symbols-outlined">help</span>
-                            <a href="#">Chính sách hủy phòng</a>
+                            <a href="/terms-of-use">Chính sách hủy phòng</a>
                         </div>
                     </div>
                     <div class="room__content--right">
@@ -78,7 +78,7 @@
                     <h1></h1>
                     <div class="modal__view--big">
                         <button onclick="prevSlide(event)" type="button"><span class="material-symbols-outlined">chevron_left</span></button>
-                        <img class="modal__slide" src="/imgs/details/1.jpg" alt="">
+                        <img class="modal__slide" src="/imgs/accommodation/accommodation_1.jpg" alt="">
                         <button onclick="nextSlide(event)" type="button"><span class="material-symbols-outlined">chevron_right</span></button>
                     </div>
                     <div class="modal__view--small">
