--- a/src/views/pages/account/card.ejs
+++ b/src/views/pages/account/card.ejs
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
   <title>2WAYS.com</title>
   <link rel="stylesheet" href="/styles/pages/account/payment.css" />
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
@@ -40,7 +42,7 @@
       </div>
     </aside>
 
-    <section class="form">
+    <section class="form form-input">
       <div class="form__title">
         <h1>Thông tin thanh toán</h1>
         <p>Thêm hoặc bỏ các phương thức thanh toán</p>
@@ -54,7 +56,11 @@
             <h1>Thẻ tín dụng/ghi nợ</h1>
             <button class="debit-credit-card--submit add-credit-account-btn">+ Thêm thẻ mới</button>
           </div>
+          <% if (true) { %>
           <h2>Bạn chưa liên kết thẻ tín dụng/ghi nợ</h2>
+          <% } else { %>
+          <%-include('../../components/card-fill')%>
+          <% } %>
         </div>
 
         <div class="form__card-item ">
