--- a/src/views/components/cancel-popup.ejs
+++ b/src/views/components/cancel-popup.ejs
@@ -82,8 +82,8 @@
                         </div>
                     </div>
                     <div class="cancel__button">
-                    <button type="submit" id="submitBtn" class="cancel__button--submit1">Đồng ý, xác nhận hủy đặt phòng</button>
-                    <button class="cancel__button--submit2 closeBtn">Không, tôi không muốn hủy</button>
+                    <button type="submit"  class="cancel__button--submit1">Đồng ý, xác nhận hủy đặt phòng</button>
+                    <button type="button" class="cancel__button--submit2">Không, tôi không muốn hủy</button>
                     </div>
 
                 </div>
