--- a/src/views/components/room-in-hs.ejs
+++ b/src/views/components/room-in-hs.ejs
@@ -1,32 +1,31 @@
 <div class="room-in-hs">
   <div class="room-in-hs__detail">
-    <h2 class="room-in-hs__name"><b>acco_name</b></h2>
+    <h2 class="room-in-hs__name"><b><%= detail.acco_name %></b></h2>
     <div class="room-in-hs__book-date">
       <label for="">Ngày đặt:</label>
-      <span>book_datetime</span>
+      <span><%=detail.book_datetime%></span>
     </div>
     <div class="room-in-hs__checkin-date">
       <label for="">Ngày bắt đầu:</label>
-      <span>book_start_datetime</span>
+      <span><%= detail.book_start_datetime %></span>
     </div>
     <div class="room-in-hs__checkout-date">
       <label for="">Ngày kết thúc:</label>
-      <span>book_end_datetime</span>
+      <span><%=detail.book_end_datetime%></span>
     </div>
     <div class="room-in-hs__book-name">
       <label for="">Người đặt phòng:</label>
-      <span>book_full_name</span>
+      <span><%=detail.book_full_name%></span>
     </div>
     <div class="room-in-hs__payment-status">
       <label for="">Trạng thái thanh toán:</label>
-      <span>book_is_paid</span>
+      <span><%=detail.book_is_paid%></span>
     </div>
   </div>
 
   <div class="room-in__title">
 
-    <h5 class="room-in__status">Đã đặt</h5>
-
+    <h5 class="room-in__status"><%=detail.book_status%></h5>
 
     <div class="policy__price">
       <div class="policy__room">
