Add event click when delete card

--- a/src/views/components/card-fill.ejs
+++ b/src/views/components/card-fill.ejs
@@ -2,7 +2,7 @@
   <img src="../../img/mastercard.png" alt="">
   <p class="name-bank">Vietcombank</p>
   <p class="phone-number">*0618</p>
-  <p class="line-delete">Xóa</p>
+  <p class="line-delete delete-btn">Xóa</p>
   <button class="filled-default">Mặc định</button>
 </div>
 
@@ -10,6 +10,6 @@
   <img src="../../img/mastercard.png" alt="">
   <p class="name-bank">Vietcombank</p>
   <p class="phone-number">*0618</p>
-  <p class="line-delete">Xóa</p>
+  <p class="line-delete delete-btn">Xóa</p>
   <button class="unfilled-default">Thiết lập mặc định</button>
 </div>
