--- a/src/views/pages/account/card.ejs
+++ b/src/views/pages/account/card.ejs
@@ -54,7 +54,7 @@
             <h1>Thẻ tín dụng/ghi nợ</h1>
             <button class="debit-credit-card--submit add-credit-account-btn">+ Thêm thẻ mới</button>
           </div>
-          <% if (true) { %>
+          <% if (false) { %>
           <h2>Bạn chưa liên kết thẻ tín dụng/ghi nợ</h2>
           <% } else { %>
           <%-include('../../components/card-fill')%>
