Update 'Tim hieu ngay' in site/index.ejs

--- a/src/views/pages/site/about.ejs
+++ b/src/views/pages/site/about.ejs
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <%- include('../../partials/header-small') %>
+    <%# include('../../partials/header-small') %>
     <%- include('../../partials/nav-tree', { nav_tree__data }) %>
     <main>
         <img class="homepage__banner" src="/imgs/banner.png" alt="Banner">
@@ -67,7 +67,7 @@
         </section>
         <img class="homepage__banner" id="partner" src="/imgs/banner.png" alt="Banner">
         <section class="mt-48">
-            <div class="about__container">
+            <div class="container--about">
                 <h1 class="section__title primary-text mt-48">Thông tin đối tác</h1>
                 <div class="section__content mt-24">
                     <h2>Vincom Center Bà Triệu: Tọa độ mua sắm thời thượng cho giới mộ điệu
