--- a/src/views/pages/site/error404.ejs
+++ b/src/views/pages/site/error404.ejs
@@ -20,11 +20,11 @@
                 <p data-p="BAD REQUEST">BAD REQUEST</p>
             </div>
         </div>
-        <button class="btn--filled sec back" type="button">
+        <!-- <button class="btn--filled sec back" type="button">
             <div class="status-layer">
                 <span>Go back</span>
             </div>
-        </button>
+        </button> -->
     </div>
 </body>
 
