--- a/src/views/pages/booking/information.ejs
+++ b/src/views/pages/booking/information.ejs
@@ -213,7 +213,7 @@
                     </div>
                 </section>
                 <button type="submit" class="btn--filled sec">
-                    <div class=" status-layer">
+                    <div style="font-weight: bold;" class=" status-layer">
                         <span>Thanh toán</span>
                     </div>
                 </button>
