Add event Delete when click and Filled-default and unfilled-default of account/card

--- a/src/views/components/card-fill.ejs
+++ b/src/views/components/card-fill.ejs
@@ -1,15 +1,25 @@
-<div class="form__debit-detail-one">
-  <img src="../../img/mastercard.png" alt="">
-  <p class="name-bank">Vietcombank</p>
-  <p class="phone-number">*0618</p>
-  <p class="line-delete delete-btn">Xóa</p>
-  <button class="filled-default">Mặc định</button>
-</div>
+ <div class="form__debit-detail-container">
+   <div class="form__debit-detail-one">
+     <img src="../../img/mastercard.png" alt="">
+     <p class="name-bank">Vietcombank</p>
+     <p class="phone-number">*0618</p>
+     <p class="line-delete delete-btn">Xóa</p>
+     <button class="filled-default default-btn">Mặc định</button>
+   </div>
 
-<div class="form__debit-detail-one">
-  <img src="../../img/mastercard.png" alt="">
-  <p class="name-bank">Vietcombank</p>
-  <p class="phone-number">*0618</p>
-  <p class="line-delete delete-btn">Xóa</p>
-  <button class="unfilled-default">Thiết lập mặc định</button>
-</div>
+   <div class="form__debit-detail-one">
+     <img src="../../img/mastercard.png" alt="">
+     <p class="name-bank">Vietcombank</p>
+     <p class="phone-number">*0618</p>
+     <p class="line-delete delete-btn">Xóa</p>
+     <button class="unfilled-default default-btn">Thiết lập mặc định</button>
+   </div>
+
+   <div class="form__debit-detail-one">
+     <img src="../../img/mastercard.png" alt="">
+     <p class="name-bank">Vietcombank</p>
+     <p class="phone-number">*0618</p>
+     <p class="line-delete delete-btn">Xóa</p>
+     <button class="unfilled-default default-btn">Thiết lập mặc định</button>
+   </div>
+ </div>
