--- a/src/public/styles/pages/account/payment.css
+++ b/src/public/styles/pages/account/payment.css
@@ -169,7 +169,11 @@ hr {
 .logout-btn {
     cursor: pointer;
 }
-
+.form__debit-detail-container {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
 .form__card-detail,
 .form__debit-detail-one,
 .form__debit-credit-card,
@@ -218,4 +222,14 @@ button.unfilled-default {
     color: #085457;
     border: 1px solid #085457;
     border-radius: 8px;
+}
+
+.form__debit-detail-one {
+    transition: opacity 0.5s;
+}
+
+.form__debit-detail-one.hidden {
+    opacity: 0;
+    height: 0;
+    overflow: hidden;
 }
