Update booking cancellation page and cancellation pop up

--- a/src/views/components/cancel-popup.ejs
+++ b/src/views/components/cancel-popup.ejs
@@ -1,3 +1,4 @@
+<div class="modal">
 <div class="cancel-container">
     <div class="cancel">
         <div class="cancel__card">
@@ -81,4 +82,5 @@
             </div>
         </div>
     </div>
+</div>
 </div>
