--- a/src/views/pages/account/card.ejs
+++ b/src/views/pages/account/card.ejs
@@ -13,6 +13,8 @@
 
 <body>
   <%- include('../../partials/header-medium') %>
+  <%- include('../../partials/nav-tree') %>
+
 
   <div class="payment-account-container">
     <aside class="aside-content">
@@ -86,8 +88,6 @@
   <script src="/scripts/search-bar.js"></script>
   <script src="/scripts/otp.js" defer></script>
   <script src="/scripts/header-medium.js"></script>
-
-
 </body>
 
 </html>
