--- a/src/views/pages/account/information.ejs
+++ b/src/views/pages/account/information.ejs
@@ -13,6 +13,8 @@
 
 <body>
   <%- include('../../partials/header-medium') %>
+  <%- include('../../partials/nav-tree') %>
+
 
   <div class="account-container">
     <aside class="aside-content">
