--- a/src/public/styles/pages/account/information.css
+++ b/src/public/styles/pages/account/information.css
@@ -2,6 +2,7 @@
 @import url("/styles/partials/header-medium.css");
 @import url("/styles/partials/footer.css");
 @import url("/styles/components/success-popup.css");
+@import url("/styles/partials/nav-tree.css");
 
 html {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -11,17 +12,14 @@ html {
 
 body {
     width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .account-container {
-    margin-top: 12px;
-    margin-bottom: 12px;
     width: 80%;
     max-width: 1152px;
     display: flex;
+    flex-direction: row;
+    margin: 12px auto;
     gap: 12px;
 }
 
