--- a/src/views/pages/account/change-password.ejs
+++ b/src/views/pages/account/change-password.ejs
@@ -14,6 +14,8 @@
 
 <body>
   <%- include('../../partials/header-medium.ejs') %>
+  <%- include('../../partials/nav-tree') %>
+
 
   <div class="change-password-container">
     <aside class="aside-content">
