--- a/src/views/pages/account/history.ejs
+++ b/src/views/pages/account/history.ejs
@@ -14,6 +14,8 @@
 
 <body>
   <%- include('../../partials/header-medium.ejs') %>
+  <%- include('../../partials/nav-tree') %>
+
 
   <main class="booking-history-container">
     <aside class=" aside-content">
