--- a/src/public/styles/pages/search/detail.css
+++ b/src/public/styles/pages/search/detail.css
@@ -278,7 +278,7 @@ body {
 
 .general-info__time span {
     font-size: 64px;
-    color: var(--primary-color);
+    color: var(--primary-color-1);
 }
 
 .time__text {
