--- a/src/views/pages/booking/success.ejs
+++ b/src/views/pages/booking/success.ejs
@@ -12,8 +12,6 @@
 
 <body>
 
-    <%- include('../../partials/header-small') %>
-
     <main class="content-container">
         <section class="main-content">
             <div class="order-status">
@@ -53,7 +51,7 @@
             <div class="order-summary">
                 <h2>Tóm tắt đơn đặt</h2>
                 <div class="order-summary__item">
-                    <img src="/imgs/details/1.jpg" alt="">
+                    <img src="/imgs/accommodation/accommodation_1.jpg" alt="">
                     <div class="order-summary__content">
                         <h3>Room Soul</h3>
                         <div>
@@ -69,7 +67,7 @@
                             <p>3 phòng</p>
                         </div>
                     </div>
-                    <button type="button" class="btn order-btn">Xem chi tiết</button>
+                    <a href="/booking/detail" class="btn order-btn" role="button">Xem chi tiết</a>
                 </div>
             </div>
         </section>
