--- a/src/views/pages/search/detail.ejs
+++ b/src/views/pages/search/detail.ejs
@@ -4,12 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./styles/pages/acco-detail.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0..1,0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="/styles/pages/search/detail.css" />
     <title>2WAYS.com</title>
@@ -18,7 +13,7 @@
 <body>
     <main class="content-container">
         <section class="title">
-            <h1><%=accoDetail[0].acco_name%></h1>
+            <h1>Khách sạn ABC</h1>
             <div class="title__frame">
                 <div class="title__info info">
                     <div class="info__slogan">Tận hưởng thả ga, không lo về giá</div>
@@ -44,11 +39,11 @@
         </section>
 
         <section class="preview">
-            <img src="/imgs/details/1.jpg" alt="" class="preview--big" />
+            <img src="/imgs/accommodation/accommodation_1.jpg" alt="" class="preview--big" />
             <div class="preview--small">
-                <img src="/imgs/details/2.jpg" alt="" />
-                <img src="/imgs/details/3.jpg" alt="" />
-                <img src="/imgs/details/4.jpg" alt="" />
+                <img src="/imgs/accommodation/accommodation_2.jpg" alt="" />
+                <img src="/imgs/accommodation/accommodation_3.jpg" alt="" />
+                <img src="/imgs/accommodation/accommodation_4.jpg" alt="" />
             </div>
         </section>
 
@@ -88,15 +83,12 @@
             </div>
         </section>
 
-        <%- include('../../components/search-bar') %>
-
         <section class="room-list" id="room-list">
             <form action="#" method="POST">
-                <input type="hidden" value="<%=accoDetail[0].acco_id%>" name="acco_id" class="form-control">
-                <!-- Start Loop -->
-                <% accoRoom.forEach(function(room){ %>
-                <%- include('../../components/room', {room}) %>
-                <% }) %>
+                <!-- <input type="hidden" value="" name="acco_id" class="form-control"> -->
+                <%- include('../../components/room') %>
+                <%- include('../../components/room') %>
+                <%- include('../../components/room') %>
                 <!-- End Loop  -->
                 <h2 class="room-list__local-price">Tổng tiền: <span class="highlight">VND 1.500.000</span></h2>
                 <div class="room-list__submit">
@@ -149,13 +141,9 @@
 
     <%- include('../../partials/footer') %>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="/scripts/room.js"></script>
-    <script src="/scripts/search-bar.js"></script>
     <script src="/scripts/header-small.js"></script>
-
 </body>
 
 </html>
